--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,10 +1,26 @@
-.main-home {
-  display: flex;
-  flex-wrap: nowrap;
-  height: 100vh;
-  height: -webkit-fill-available;
-  max-height: 100vh;
-  overflow-x: auto;
-  overflow-y: hidden;
+.home {
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+aside {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 280px;
+  z-index: 1;
+}
+
+aside > nav {
+  height: 100%;
+}
+
+main {
+  margin-left: 280px;
+}
+
+.nowrap:after {
+  content: "";
+  width: 22%;
 }
